...
            "value" : "hotovo"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
          }
        },
        "en-CO" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "done"
...
            "state" : "translated",
            "value" : "hours"
          }
        }
      }
    },
    "Include time" : {
      "extractionState" : "manual",
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Uvést čas"
...
